--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
     - name: build docker image
-      run: docker build -t abhishekrockzz78/ec2deploy
+      run: docker build -t abhishekrockzz78/ec2deploy .
     - name: push to docker hub
       run: docker push abhishekrockzz78/ec2deploy:latest
       
