--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,10 +11,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: checking docker password
-      run: echo "${{ secrets.DOCKER_PASSWORD }}"
     - name: login to docker hub
-      run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+      run: docker login -u abhishekrockzz78 -p Killany2@1
     - name: build docker image
       run: docker build -t abhishekrockzz78/ec2deploy .
     - name: push to docker hub
